fix: some refactors